cue/testdata/eval/errunifiy.txtar
Incomplete errors should not unify with values.

-- in.cue --
a: or([])
a: "t"

b: _|_
b: "t"

-- out/eval --
Errors:
user-defined error:
    ./in.cue:4:4

Result:
(_|_){
  // [user]
  a: (string){ "t" }
  b: (_|_){
    // [user] user-defined error:
    //     ./in.cue:4:4
  }
}
-- out/compile --
--- in.cue
{
  a: or([])
  a: "t"
  b: _|_(user-defined error)
  b: "t"
}
